--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Crimson Text', serif;
             line-height: 1.6;
+            color: #333;
         }
         header {
             background-color: #A41034;
@@ -35,13 +36,40 @@
             text-decoration: none;
         }
         .hero {
+            position: relative;
             background: url('7.jpg') no-repeat center center/cover;
             color: #fff;
             text-align: center;
             padding: 100px 20px;
         }
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5); /* Adds a dark overlay */
+            z-index: 1;
+        }
+        .hero-content {
+            position: relative;
+            z-index: 2;
+            background: rgba(255, 255, 255, 0.8); /* Adds a light background behind the text */
+            display: inline-block;
+            padding: 20px 40px;
+            border-radius: 5px;
+            text-align: left;
+        }
         .hero h1 {
             font-size: 3em;
+            font-weight: bold;
+            color: #A41034;
+            margin-bottom: 10px;
+        }
+        .hero p {
+            font-size: 1.2em;
+            color: #333;
         }
         .sections {
             display: flex;
@@ -68,6 +96,7 @@
             margin: 0 10px;
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -84,8 +113,10 @@
     </header>
 
     <div class="hero">
-        <h1>Welcome to Harvard University</h1>
-        <p>Excellence in education, research, and innovation.</p>
+        <div class="hero-content">
+            <h1>Resolutions</h1>
+            <p>Whether you want to make small improvements to your lifestyle or treat yourself to some useful knowledge, the Harvard community can help you start something new this year.</p>
+        </div>
     </div>
 
     <div class="sections">
