--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
 
     <div class="hero">
         <div class="hero-content">
+            <h1>Welcome to Harvard</h1>
             <h1>Resolutions</h1>
             <p>Whether you want to make small improvements to your lifestyle or treat yourself to some useful knowledge, the Harvard community can help you start something new this year.</p>
         </div>
     </div>
+    
 
     <div class="sections">
         <div class="section">
